crates/yakui-widgets/tests/snapshots/align_center.snap
---
source: crates/yakui-widgets/tests/snapshot.rs
assertion_line: 51
expression: view
---
- AlignWidget pos(0, 0) size(1000, 1000)
  - ColoredBoxWidget pos(475, 475) size(50, 50)

