crates/yakui-widgets/tests/snapshots/align_text_center.snap
---
source: crates/yakui-widgets/tests/snapshot.rs
assertion_line: 264
expression: view
---
- AlignWidget pos(0, 0) size(1000, 1000)
  - TextWidget pos(376.25, 464) size(247.5, 72)
    - PadWidget pos(376.25, 464) size(247.5, 72)
      - RenderTextWidget pos(376.25, 464) size(247.5, 72)
