crates/yakui-widgets/tests/snapshots/button_text_alignment.snap
---
source: crates/yakui-widgets/tests/snapshot.rs
assertion_line: 310
expression: view
---
- AlignWidget pos(0, 0) size(1000, 1000)
  - ConstrainedBoxWidget pos(0, 0) size(800, 800)
    - ButtonWidget pos(0, 0) size(800, 800)
      - RoundRectWidget pos(0, 0) size(800, 800)
        - PadWidget pos(0, 0) size(800, 800)
          - AlignWidget pos(20, 10) size(760, 780)
            - RenderTextWidget pos(276.25, 364) size(247.5, 72)
