crates/yakui-widgets/tests/snapshots/colored_box.snap
---
source: crates/yakui-widgets/tests/snapshot.rs
assertion_line: 9
expression: view
---
- ColoredBoxWidget pos(0, 0) size(50, 50)

