crates/yakui-widgets/tests/snapshots/column_item_spacing.snap
---
source: crates/yakui-widgets/tests/snapshot.rs
assertion_line: 41
expression: view
---
- ListWidget pos(0, 0) size(1000, 1000)
  - ColoredBoxWidget pos(0, 0) size(50, 50)
  - ColoredBoxWidget pos(0, 60) size(50, 50)
  - ColoredBoxWidget pos(0, 120) size(50, 50)

