crates/yakui-widgets/tests/snapshots/column_main_align_end.snap
---
source: crates/yakui-widgets/tests/snapshot.rs
assertion_line: 42
expression: view
---
- ListWidget pos(0, 0) size(1000, 1000)
  - ColoredBoxWidget pos(0, 850) size(50, 50)
  - ColoredBoxWidget pos(0, 900) size(50, 50)
  - ColoredBoxWidget pos(0, 950) size(50, 50)

